--- a/index.html
+++ b/index.html
@@ -16408,35 +16408,32 @@ Example:
 
     <template>
         test
-        <paper-drawer-panel id="drawerPanel" responsive-width="1280px">
+        <paper-drawer-panel id="drawerPanel">
             <paper-header-panel drawer="">
-                <paper-toolbar>
-                    <span class="title">Darkholme</span>
-                </paper-toolbar>
                 <div>
                     <paper-item>
                         <paper-item-body>
-                            <a href="http://omv.darkholme.net/">OpenMediaVault</a>
+                            <a href="http://omv.darkholme.net/" target="_blank">OpenMediaVault</a>
                         </paper-item-body>
                     </paper-item>
                     <paper-item>
                         <paper-item-body>
-                            <a href="http://sql.darkholme.net/">PHPMyAdmin</a>
+                            <a href="http://sql.darkholme.net/" target="_blank">PHPMyAdmin</a>
                         </paper-item-body>
                     </paper-item>
                     <paper-item>
                         <paper-item-body>
-                            <a href="http://pydio.darkholme.net/">Pydio</a>
+                            <a href="http://pydio.darkholme.net/" target="_blank">Pydio</a>
                         </paper-item-body>
                     </paper-item>
                     <paper-item>
                         <paper-item-body>
-                            <a href="http://shimmie.darkholme.net/">Shimmie</a>
+                            <a href="http://shimmie.darkholme.net/" target="_blank">Shimmie</a>
                         </paper-item-body>
                     </paper-item>
                     <paper-item>
                         <paper-item-body>
-                            <a href="http://torrent.darkholme.net/">Transmission</a>
+                            <a href="http://torrent.darkholme.net/" target="_blank">Transmission</a>
                         </paper-item-body>
                     </paper-item>
                 </div>
